fixed back navigation for composite key